--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@
       </div>
     </div>
   </section>
+      <footer class="background">
+            <p class="text-footer">
+
+                Copyright &copy; 2028 Krishiculture.com-All rights reserved
+            </p>
+    </footer>
 </body>
 </html>
 
