--- a/index.html
+++ b/index.html
@@ -260,6 +260,12 @@
     </div>
   </div>
   </section>
+      <footer class="background">
+            <p class="text-footer">
+
+                Copyright &copy; 2029 Krishiculture.com-All rights reserved
+            </p>
+    </footer>
 </body>
 </html>
 
